# ratatui_axum_server

./: Cargo.toml  README.md  config.yaml
axum_handlers/: Cargo.toml  README.md
axum_handlers/src/: handler.rs  lib.rs  registry.rs
axum_server/: Cargo.toml  config.yaml
axum_server/docs/: custom_handlers.md
axum_server/examples/: advanced_config.yaml  custom_handlers.rs  handlers_config.yaml  test_server.ps1  test_server.sh
axum_server/src/: config.rs  custom_handlers.rs  main.rs  routes.rs
axum_tui/: Cargo.toml  README.md
axum_tui/src/: app.rs  lib.rs  util.rs
axum_tui/src/ui/: draw.rs  events.rs  mod.rs
